# micromobilitybike

./: README.md  pyproject.toml
appdomain/: pyproject.toml
appdomain/appdomain/mobapp/: pyproject.toml
appdomain/appdomain/mobapp/mobapp/: usermanageapp.py
appdomain/appdomain/webapp/: pyproject.toml
eventstorming/: READMe.md
userdomain/: pyproject.toml
userdomain/userdomain/: user.py  usermgmt.py
workflowdomain/: pyproject.toml
workflowdomain/workflowdomain/: test.py
workflowdomain/workflowdomain/userflows/: .user_registration_workflow_run.py.swp  user_registration_activity.py  user_registration_worker.py  user_registration_workflow.py  user_registration_workflow_run.py
