[tool.poetry]
name = "workflowdomain"
version = "0.1.2"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
temporalio = "^1.3.0"
userdomain = {path = "../userdomain/dist/userdomain-0.1.1.tar.gz"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
